--- a/resume/index.html
+++ b/resume/index.html
@@ -38,7 +38,11 @@
                     <p>
                         <p>
                             Descubrí la programación cuando tenia 14 años y desde entonces es mi hobby, comencé a programar con lapiz y
-                            papel porque no tenia PC. Realicé una Licenciatura en Informatica para obtener 
+                            papel porque no tenia PC. 
+                            De acuerdo a mi experiencia, no se puede ser fanatico de ninguna tecnología.
+                            La tecnologia sirve para solucionar problemas, cuando hay un problema se analiza
+                            y se determina que herramienta y lenguaje son mejores para darle solución.
+                            Realicé una Licenciatura en Informatica para obtener 
                             un título universitario, mi principal caracteristica es ser autodidacta. He
                             realizado cursos de Mysql , Postgresql , PHP , Java, C# , Linq, Delphi ,ect... 
                         </p>
@@ -55,7 +59,12 @@
                         </p>
 
                         <p>
-                            En cuanto a SGBD., aparte del BDE (DBASE, Paradox) y otras bases de datos no relacionales.  
+                            Me encanta la creación de Compiladores, Parsers, DSLs, Editores de código y otras herramientas que permitan mejorar
+                            la productividad. Todas las tareas que se pueden automatizar, las automatizo.
+                        </p>
+                        
+                        <p>
+                            En cuanto a SGBD, aparte del BDE (DBASE, Paradox) y otras bases de datos no relacionales.  
                             Conozco  teoría de bases de datos, los estandares SQL-92,SQL-99,SQL-2003 y estoy familiarizado con los dialectos (PL/SQL, Mysql, Sqlite, Derby, H2)
                             , MS-SQL Server (Transact SQL) y algo de Interbase (ISQL). Como métodos de acceso conozco el BDE.
                             ODBC, ADO/OLEDB, DBExpress, JBDC, Hibernate, JPA, Doctrine, ADO.NET, Entity Framework y los accesos nativos 
