- added DevOps info - added IA,ML,DL info

--- a/resume/index.html
+++ b/resume/index.html
@@ -79,8 +79,8 @@
                             , incluida la tecnología COM y ActiveX, etc.) conozco bastante bien.
                         </p>
                         <p>
-                            Una de las ramas en las que me he especializado es
-                            la administración de redes por lo que conozco con fundamento la mayoría de las tecnologías de Internet:
+                            He sido DevOps de toda la vida, por lo que una de las ramas en las que me he especializado es
+                            la administración de redes, conozco con fundamento la mayoría de las tecnologías de Internet:
                             UDP, TCP/IP, HTTP con extensiones tanto en el servidor(CGI, ISAPI, módulos Apache, ASP, PHP) como en el cliente
                             , y por supuesto el resto de protocolos de Internet: SMTP, POP3, SSH, LDAP entre otros. 
                             Así como el montaje y configuraci&oacute;n de servicios de red,Firewalls, Clusters y la Virtualizacion de servidores y servicios con OpenVZ,LXC,KVM y Docker.
@@ -95,6 +95,12 @@
                             Permitiendo demostrar los riesgos funcionales de las vulnerabilidades detectadas , prevenirlas y minimizar los daños.                       
                             As&iacute; como tecnicas de hacking e ingenier&iacute;a inversa para el desensamblado, an&aacute;lisis 
                             y protección de aplicaciónes.
+                        </p>
+                        
+                        <p> 
+                            Con respecto al auge de la IA, el Machine learning y el Deep learning.
+                            Por el momento soy usuario de las principales bibliotecas que existen.
+                            Pero es un campo apasionante en el que quiero continuar profundizando.
                         </p>
 
                     </p>
