--- a/resume/index.html
+++ b/resume/index.html
@@ -318,9 +318,9 @@
                         <div class="item-skills" data-percent="0.90">SQL</div>
                         <div class="item-skills" data-percent="0.90">Visual Basic (.NET,VBS,VBA)</div>
                         <div class="skills-legend clearfix">
-                        <div class="legend-left legend">Principiante</div>
-                        <div class="legend-left legend"><span>Muy competente</span></div>
-                        <div class="legend-right legend"><span>Experto</span></div>
+                        <div class="legend-left legend">Beginner</div>
+                        <div class="legend-left legend"><span>Very competent</span></div>
+                        <div class="legend-right legend"><span>Expert</span></div>
                         <div class="legend-right legend">Master</div>
                         </div>
                     </div>
