--- a/resume/index.html
+++ b/resume/index.html
@@ -26,7 +26,7 @@
                 <img src="img/avatar/rnapoles.jpg" alt="avatar">
             </div>
             <div id="text-header">
-                <h1>Hi,<br> my name is <span>Reinier</span> and this is my CV.</h1>
+                <h1><span>Hi</span>,<br> my name is <span>Reinier</span> and this is my CV.</h1>
             </div>
             </div>
         </div>
